# code_reviewer

./: README.md  pyproject.toml
src/code_reviewer/: cli.py
src/code_reviewer/config/: settings.py
src/code_reviewer/core/: analyzer.py  file_handler.py  reviewer.py
src/code_reviewer/models/: entities.py
src/code_reviewer/utils/: helpers.py  logger.py
